<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reparline</string>
    <string name="contentDescription">Description</string>
    <string name="buttonLogin">Entrar</string>
    <string name="footerLogin">Desarrollado por DroidStore 2014</string>
    <string name="hintImputUserLogin">Usuario</string>
    <string name="hintImputPasswordLogin">Contraseña</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_section1">Mis Incidencias</string>
    <string name="title_section2">Públicas</string>
    <string name="title_section3">Reparaciones</string>
    <string name="title_section4">Mi perfil</string>
    <string name="title_section5">AJUSTES</string>
    <string name="title_section6">CERRAR SESIÓN</string>
    <string name="userName">José Antonio Rodríguez Vargas</string>
    <string name="createAccount"><u>Crear una cuenta</u></string>
    <string name="createAccountLabel">Regístrate en Reparline</string>
    <string name="nameLabel">Nombre*</string>
    <string name="surnameLabel">Apellidos</string>
    <string name="emailLabel">Nombre de Usuario*</string>
    <string name="passwordLabel">Contraseña*</string>
    <string name="repasswordLabel">Confirme la contraseña*</string>
    <string name="passwordLabel2">Contraseña</string>
    <string name="repasswordLabel2">Confirme la contraseña</string>
    <string name="registerButton">Registrarse</string>
    <string name="editButton">Modificar Imagen</string>
    <string name="personalDataLabel">Datos personales</string>
    <string name="privateData">Datos privados</string>
    <string name="saveData">Guardar Configuración</string>
    <string name="editPassword">Cambiar Contraseña</string>
    <string name="phone">Teléfono</string>
    <string name="dialogMessage">Seleccione una opción</string>
    <string name="optionCamera">Cámara</string>
    <string name="optionGallery">Galería</string>
    <string name="title_activity_picture_editor">Edicción de imagen</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="labelLocation">Localización</string>
    <string name="title_activity_map_location">Indique su localización</string>
    <string name="uploadImage">Subir Imagen</string>
    <string name="rotateImage">Rotar imagen</string>
    <string name="titleProgress">Espere</string>
    <string name="progressDialogPassword">Cambiando contraseña</string>
    <string name="titleDialogPassword">Indique su nueva contraseña</string>
    <string name="errorPassword">Las contraseñas no coinciden</string>
    <string name="errorPassword2">La contraseña no puede estar vacía</string>
    <string name="errorServer">Error en el servidor, intentelo de nuevo</string>
    <string name="passwordChange">Contraseña cambiada con éxito</string>
    <string name="UploadFile">Subiendo imagen</string>
    <string name="saveLocation">Guardando localización</string>
    <string name="auth">Autenticando</string>
    <string name="dataOk">Datos actualizados con éxito</string>
    <string name="locationOk">Localización actualizada correctamente</string>
    <string name="updateData">Actualizando datos</string>
    <string name="nameVoid">El campo nombre no puede estar vacio</string>
    <string name="registerUser">Registrando usuario</string>
    <string name="registerIncidence">Registrando incidencia</string>
    <string name="registerPost">Registrando respuesta</string>
    <string name="errorPasswordandNameuser">Nombre de usuario u contraseña incorrecta</string>
    <string name="errorNameuserInUse">Nombre de usuario ya en uso</string>
    <string name="errorDataVoid">Hay campos obligatorios vacios</string>
    <string name="loading">Cargando datos</string>
    <string name="errorTitleIncidence">El título debe contener al menos 15 carácteres</string>
    <string name="errorDescriptionIncidence">Para mejorar la funcionalidad el tamaño mínimo de la descripción es de 200 carácteres</string>
    <string name="errorDescriptionPost">Para mejorar la funcionalidad el tamaño mínimo de la descripción es de 100 carácteres</string>
    <string name="withoutData">Sin datos</string>
    <string name="errorDefault">Error al cargar, por favor intentelo de nuevo</string>
    <string name="serviceLocationUnavailable">Servicio de geolocalización no disponible</string>
    <string name="title_activity_post_incidence">Publica una incidencia</string>
    <string name="search">Buscar</string>
    <string name="addIncidence">Nueva Incidencia</string>
    <string name="checkIncidence">Publicar Incidencia</string>
    <string name="deleteIncidence">Eliminar Incidencia</string>
    <string name="editIncidence">Editar Incidencia</string>
    <string name="sentResponse">Responder</string>
    <string name="hintTitleIncidence">Indica un título</string>
    <string name="hintDescriptionIncidence">Indica la descripción</string>
    <string name="autor">Por</string>
    <string name="titl_section1">Incidencia</string>
    <string name="titl_section2">Respuestas</string>
    <string name="writePost">Escribe aquí tu respuestas</string>
    <string name="closeIncidence">Cerrar</string>
    <string name="privateIncidence">Privatizar</string>
    <string name="description">Description</string>
    <string name="selectOption">Seleccione el tipo de incidencia</string>
    <string name="publicIncidence">Pública</string>
    <string name="incidenceRepair">Reparación</string>
    <string name="title_activity_post_post">PostPost</string>
    <string name="postOk">Post registrado correctamente</string>
    <string name="incidenceOk">Incidencia registrada correctamente</string>
    <string name="warning">Atención</string>
    <string name="messageAlertDialogCloseSession">¿Estás seguro que desea cerrar sesión?</string>

</resources>