<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/inputPasswordDialogEditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:hint="@string/passwordLabel2"
        android:inputType="textPassword"
        android:singleLine="true"
        fontawesometext:be_roundedCorners="true"
        fontawesometext:be_state="primary" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/inputRePasswordDialogEditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPasswordDialogEditPassword"
        android:layout_margin="10dp"
        android:hint="@string/repasswordLabel2"
        android:inputType="textPassword"
        android:singleLine="true"
        fontawesometext:be_roundedCorners="true"
        fontawesometext:be_state="primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputRePasswordDialogEditPassword"
        android:gravity="center"
        android:orientation="horizontal" >

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/buttonOkEditPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/save"
            bootstrapbutton:bb_icon_right="fa-check"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="default"
            bootstrapbutton:bb_type="success" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/buttonCancelEditPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            bootstrapbutton:bb_icon_right="fa-times"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="default"
            bootstrapbutton:bb_type="danger" />
    </LinearLayout>

</RelativeLayout>